--- a/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol/symbol.component.scss
+++ b/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol/symbol.component.scss
@@ -7,17 +7,17 @@
 }
 
 .my-radio-button {
-	margin: 0 10px;
+//	margin: 0 10px;
 }
 .my-checkbox {
-	margin-left: 10px;
+//	margin-left: 10px;
 }
 .symbol-data {
 	margin-right: 10px;
 }
 
 .text-container {
-	margin-bottom: 10px;
+//	margin-bottom: 10px;
 }
 
 .chart-container {
