--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.scss
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.scss
@@ -22,6 +22,6 @@
 
 /*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.
  */
-::ng-deep .mat-tab-body-wrapper {
+::ng-deep .mat-mdc-tab-body-wrapper {
 	height: 100%;
 }
