--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-comparison/portfolio-comparison.component.scss
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-comparison/portfolio-comparison.component.scss
@@ -24,13 +24,13 @@
 	margin: 0 10px;
 }
 .my-radio-button {
-	margin: 0 10px;
+//	margin: 0 10px;
 }
 .my-checkbox {
-	margin-left: 10px;
+//	margin-left: 10px;
 }
 .text-container {
-	margin-bottom: 10px;
+//	margin-bottom: 10px;
 }
 .center-div {
 	display: flex;
